--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -1,77 +1,114 @@
-<div style="display: block; min-width: 40%; margin-right:2%;  width: 50%; float: right; align: center" >
-<div >
-  <br>
-  <br>
- <span style="color:midnightblue; font-size: large; font-style: oblique; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-   Check your Emi by yourself before Applying !!!! because we care about your credit score!</span>
-    <br>
-    <br>
-    <div style="background-color: lightgrey ; padding-left: 10%;" >
-      <br>
-      
-    <span style="font-family: Georgia, 'Times New Roman', Times, serif ;font-size: large;">Beneficial Organization Policies With Us</span><br>
-    <br>
-    <span style="font-size: 120%;">
-    1. FLAT EMI POLICY<br><br>
-    2. 13.5% intrest rate on organizational Loan<br><br>
-    3. Secured loans<br><br>
-    4. Best loan for your buisness<br><br>
-    5. Want to start Startup? We are here<br><br>
-    6. What are our screening POLICY<br><br>
-    </span>
-    <br>
+<div style="max-width:50">
+  <button class="birdButton" (click)="goToUrl('Orgnizational-user')">Apply Here</button>
   </div>
-  <br>
-  <br>
-  <span style="color:midnightblue; font-size: large; font-style: oblique; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-   WE help you in growing your business of your dreams!!!!</span>
-    
-        <div class="container-login100-form-btn" >
-          <button class="login100-form-btn" (click)="goToUrl('Orgnizational-user')">Apply  Now</button>
+  
+  <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
+  <!--<br>
+  ABOUT Personal User Policies(key points)<br>
+  1.FLAT EMI POLICY<br>
+  2.11.5% intrest rate on individual Loan<br>
+  3.Un-Secured loans<br>
+  4. loan for your buisness<br>
+  5. Want to start Startup? We are here<br>
+  6. What are our screening POLICY<br>
+  7. Check your Emi by yourself before Applying! because we care about your credit score!<br>-->
+  
+  
+  
+  <div id="wrap">
+  
+  <div class="container">
+    <img src="assets/blank.png" alt="" style="width:2%; height:1%">
+  <!--  <div class="center-left" ><h1 style=" font-size: 40px;" aTilt>Policy:</h1><br>
+   </div><br> -->
+  <!--    <div class="bottom-right">
+      <img src="assets/loan.png" alt="" style="width:70%; align:right;">
+      </div>-->
+  </div>
+  
+      <div class="space-footer">
+          <section class="white">
+              <div class="container">
+                  <article class="orange-box">
+                     <h1  style="color:white;">Policy for Organizations<br></h1>
+                      <div class="row row2col">
+                          <div class="col-md-6 col-left">
+                              <p  style="color:white;"> 
+                                1. Flat EMI<br><br>
+                                2. 13.5% intrest rate on individual Loan<br><br>
+                                3. Secured loans<br><br>
+                                4. Loans for small organizations.<br><br>
+                                5. Want to start Startup? We are here<br><br>
+  
+                              </p>
+                          </div>
+                          <div class="col-md-6 col-right">
+                              <p  style="color:white;">      
+                              6. What are our screening POLICY<br><br>
+                              7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
+                              </p>
+                              <p  style="color:white;"><i>Happy Loaning!</i></p>
+                          </div>
+                  </div></article>
+                  <div class="clearfix"></div>
+              </div>
+              
+          </section>
+      </div>
+  
+  
+  <!--===========================================================-->
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!--===========================================================-->
+  
         </div>
-    
-    </div>
-   </div>
-    
-    <div style=" display:block; float: left; max-width:40%" >
-    
-    <div class="limiter">
-            <div class="container-login100"><br>
-        <H1 class=".login100-form-title " aTilt>Calculate Your EMI</H1><br>
-            <div class="wrap-login100">
-    
-        <form #calculator="ngForm" (ngSubmit)="calculateEMI()" class="login100-form" style="border:none;" ><br>
-    
-                        <div class="container" aTilt >
-                        <img src="assets/calculator.jpeg" alt="IMG"  style="width:100%;height:100%;"> 
-                    </div>
-    
-    <div class="wrap-input100" >
-          <input type="number" class="input100" placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
-                             <span class="focus-input100"></span>
-                                <i class="fa fa-envelope" aria-hidden="true"></i>
-        </div>
-    
-    
-        <div class="wrap-input100" >
-          <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure><br>
-                              <span class="focus-input100"></span>
-                                <i class="fa fa-lock" aria-hidden="true"></i>
-        </div>
-    
-        <label aTilt><br>EMI: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
-    
-    
-        </form>
-        </div>
-        </div>
-        
-        </div>
-       
-    </div>
-
-    <!-- <div class="container">
-      <img src="assets/img/businessLoans.jpg" alt="img" style="width:100%;height:100%;">
-      
-      
-          </div> -->
+  
+   <!--  <div class="container-login100-form-btn" >
+        <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Here!</button>
+      </div>
+  -->
+  </div>
+  
+  <div style=" display:block; float: left; max-width:25%; margin-left:5%" >
+  
+  <div class="limiter">
+      <div class="container-login100"><br>
+      <H1 class=".login100-form-title " aTilt>Calculate Your EMI</H1><br>
+      <div class="wrap-login100">
+  
+      <form #calculator="ngForm" (ngSubmit)="calculateEMI()" class="login100-form" style="border:none;" ><br>
+  
+              <div class="container" aTilt >
+            <img src="assets/calculator.jpeg" alt="IMG"  style="width:100%;height:100%;"> 
+          </div>
+  
+  <div class="wrap-input100" >
+        <input type="number" class="input100" placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
+               <span class="focus-input100"></span>
+      </div>
+  
+  
+      <div class="wrap-input100" >
+        <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure><br>
+                <span class="focus-input100"></span>
+      </div>
+  
+      <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
+  
+  
+      </form>
+      </div>
+      </div>
+      </div>
+  
+  </div>
