--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.css
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.css
@@ -4,7 +4,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
 
-input[type=text], input[type=number] {
+input[type=text], input[type=number] ,input[type=select]{
   width: 150%;
 
   padding: 12px 20px;
