--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -2,7 +2,7 @@
    <!-- <img src="assets/img/short-term-business-loans.jpg"  alt="alternative text" style="position: relative;"  class="img1" > -->
    
  
-<div *ngIf="this.storeRole=='Organization' and this.store!=null">
+   <div *ngIf="this.storeRole=='Organization' and this.store!=null">
     <!-- <div style="display: block; min-width: 400px; margin-left:29%; width: 100%;" > -->
     <!-- <div class="outtermost1"> -->
       <div class="limiter">
@@ -46,12 +46,15 @@
     <br>
         <div class="wrap-input100">
           <input type="text" #pancard="ngModel" placeholder="   Pan Card - AAAA1234A" 
-          class="input100" name="pancard" 
+          class="input100" name="pancard" pattern="(^([a-zA-Z]{5})([0-9]{4})([a-zA-Z]{1})$)"
           [(ngModel)]="applicationModel.pancard" required>
           <div *ngIf="pancard.invalid && (pancard.dirty || pancard.touched)"
           class="text-danger">      
         <small *ngIf="pancard.errors.required">
           PAN no. is required.
+        </small>
+        <small *ngIf="pancard.errors.pattern">
+          fill correct pan no.
         </small>
       
                 <span class="focus-input100"></span>
@@ -116,7 +119,8 @@
       </div>
         
         <div class="wrap-input100">
-          <input type="text" #licenseno="ngModel" placeholder="License Number" class="input100" name="licenseno" [(ngModel)]="applicationModel.licenseNumber" required>
+          <input type="text" #licenseno="ngModel" placeholder="License Number" 
+          class="input100" name="licenseno" [(ngModel)]="applicationModel.licenseNumber" required>
           <div *ngIf="licenseno.invalid && (licenseno.dirty || licenseno.touched)"
           class="text-danger">
           <small *ngIf="licenseno.errors.required">
@@ -128,7 +132,13 @@
       </div>
         
         <div class="wrap-input100">
-          <input type="text" #organizationType="ngModel" placeholder="Type of Organization" class="input100" name="organizationType" [(ngModel)]="applicationModel.organizationType" required>          
+          <select class="custom-select"  #organizationType="ngModel" 
+          value="Type of Organization" class="input100" name="organizationType"
+           [(ngModel)]="applicationModel.organizationType" required style="width: 150%;">
+            <option value="" >Type of Organization</option>
+            <option *ngFor="let city of City" [ngValue]="city">{{city}}</option>
+         </select>
+          <!-- <input type="text" #organizationType="ngModel" placeholder="Type of Organization" class="input100" name="organizationType" [(ngModel)]="applicationModel.organizationType" required>           -->
           <div *ngIf="organizationType.invalid && (organizationType.dirty || organizationType.touched)"
           class="text-danger">
           <small *ngIf="organizationType.errors.required">
@@ -141,7 +151,8 @@
       </div>
         
         <div class="wrap-input100">
-          <input type="number" #loanTenure="ngModel" placeholder="Duration of Repayment- in Months" class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
+          <input type="number" #loanTenure="ngModel" placeholder="Duration of Repayment- in Months"
+           class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
           <div *ngIf="loanTenure.invalid && (loanTenure.dirty || loanTenure.touched)"
           class="text-danger">
           <small *ngIf="loanTenure.errors.required">
@@ -153,30 +164,37 @@
         </div>
 </div>
 
-        <div class="wrap-input100" style="margin-left: 10%; justify-content:center ;">
-          <input type="checkbox"  name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" >
-                <span >Do you have any criminal record.If no,mark the box</span>
-                  
-        </div>
-  
-                <div class="wrap-input100" style="margin-left: 10%;">
-          <input type="checkbox"  name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" >
-               Are you bankrupt.If no,mark the box
-                  
-        </div>
+<div class="wrap-input100">   
+  <label style="margin:20px">  Do you have any past criminal records: </label><br>
+       <input type="radio" class="toggle" name="criminalRecord" 
+        [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <!--<br> -->
+       <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=1 style="margin:15px">  Yes <br>
+      <span class="focus-input100"></span>
+</div>
+
+<div class="wrap-input100">   
+  <label style="margin:20px">  Are you Bankrupt: </label><br>
+       <input type="radio" class="toggle" name="bankruptcy"
+         [(ngModel)]="applicationModel.bankruptcy" value=0 style="margin:15px">  No <!-- <br> -->
+       <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
+      <span class="focus-input100"></span>
+</div>
+
      
         <div class="container-login100-form-btn" >
           <button class="login100-form-btn"  [disabled]="!application.form.valid" (click)="apply()">Apply</button>
+         
+       
         </div> 
     
     </form>
   
     </div> 
      
-    <!-- </div> -->
+    </div> 
     <!-- </div> -->
     <!-- </div> -->
    
-  <div *ngIf="this.store==null">
-  <app-login></app-login>
-  </div>
+    <div *ngIf="this.store==null">
+      <app-login></app-login>
+      </div>
