--- a/Creditz-Angular-src/app/schedular/schedular.component.html
+++ b/Creditz-Angular-src/app/schedular/schedular.component.html
@@ -63,7 +63,7 @@
           </mat-expansion-panel>
             
           </mat-accordion>
-         <img src="assets/alarm.jpg" style="width:100%;height:500px;">
+         <img src="assets/alarm1.jpg" style="width:100%;height:500px;">
     
     </mat-sidenav-content>
 
