--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -38,6 +38,9 @@
         <a class="nav-link" (click)="logout()" >  logout  </a>
       </li>
 
+      <!-- <li class="nav-item" *ngIf="this.store!=null && this.role=='Organization'">
+        <a class="nav-link" (click)="applicationStatus()" >  Application Status</a>
+      </li> -->
 
 
     </ul>
