--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -85,7 +85,10 @@
   </mat-dialog-content>
 </div>
 
+<div *ngIf="this.store!=null && this.storeRole=='Organization'">
 
+  <span style="font-style: normal;font-size: x-large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">sorry !!!!!! Need to log out. you are not organizational user.... </span>
+   </div>
 
 
 <!--
