--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
@@ -1,4 +1,4 @@
-
+<div *ngIf="this.storeRole=='Analyst' and this.store!=null">
 <div style=" min-width:50%; max-width:50%;float:right;">
   <div class="container" >
     <img src="assets/discussion.jpg" alt="IMG" class="image">
@@ -7,7 +7,7 @@
 
 
 <div style="max-width:50%; min-width:50%; float:left;"> 
-<!-- <div *ngIf="this.storeRole=='Analyst' and this.store!=null"> -->
+
 <mat-tab-group animationDuration="1000ms">
 <mat-tab label ="Top Individual Creditors">
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
@@ -37,17 +37,11 @@
   <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
     <div class="example-element-detail"
          [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-      <!-- <div class="example-element-diagram">
-        <div class="example-element-position"> {{element.position}} </div>
-        <div class="example-element-symbol"> {{element.symbol}} </div>
-        <div class="example-element-name"> {{element.name}} </div>
-        <div class="example-element-weight"> {{element.weight}} </div>
-      </div> -->
+      
       <div class="example-element-description">
         <h4> Applicant Id  :{{element.applicationId}}</h4>
         <h4> Loan Amount   :{{element.loanAmount}}</h4>
         <h4> Occupation   :{{element.occupation}}</h4>
-        <!-- <h4> Email  :{{element.user.userEmail}}</h4> -->
         <h4> Loan Tenure:{{element.loanTenure}}</h4>
       </div>
     </div>
@@ -92,17 +86,12 @@
       <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay1.length">
         <div class="example-element-detail"
         [@detailExpand]="element == expandedElement1 ? 'expanded' : 'collapsed'">
-          <!-- <div class="example-element-diagram">
-            <div class="example-element-position"> {{element.position}} </div>
-            <div class="example-element-symbol"> {{element.symbol}} </div>
-            <div class="example-element-name"> {{element.name}} </div>
-            <div class="example-element-weight"> {{element.weight}} </div>
-          </div> -->
+         
           <div class="example-element-description">
             <h4> ApplicantId   :{{ element.applicationId }}</h4>
             <h4> LoanAmount    :{{element.loanAmount}}</h4>
             <h4> Revenue       :{{element.revenue}}</h4>
-            <!-- <h4> Email  :{{element.user.userEmail}}</h4> -->
+           
             <h4> Loan tenture  :{{element.loanTenure}}</h4>
             <h4> Director Name :{{element.organizationId.directorName}}</h4>
           </div>
@@ -125,9 +114,9 @@
 </mat-tab-group>
 </div>
 
-<!-- <div *ngIf="this.store==null">
+<div *ngIf="this.store==null">
 <app-login></app-login>
 </div> 
- --> 
+ 
 
 
