--- a/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
@@ -1,5 +1,6 @@
 
 <div class= "data-container mat-elevation-z12">
+ <div class="heading"><h1> Person Applications Details</h1></div> 
   <div class="example-header">
     <mat-form-field floatLabel="never">
       <input matInput (keyup)="applyFilter($event.target.value)" [(ngModel)]="searchKey" placeholder="SearchByApplicationStatus">
