--- a/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.css
+++ b/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.css
@@ -6,19 +6,16 @@ mat-table {
   font-family:'Times New Roman', Times, serif;
   font-size: 15px;color: darkblue; 
   }
-  .mat-tab
-  /* {
-    color: crimson;
-  }
   h1{
-    font-family: 'Times New Roman', Times, serif;font-size: 50px;color: darkblue;
+    font-family:'Times New Roman', Times, serif;
+    color: darkblue; 
+    text-align: center;
+    font-size: 40px;
   }
-  td{
-  font-size:15px;color: crimson;
-   }
-   th{
-     font-size: 18px;color: darkblue;
-   } */
+    
+ 
+  .mat-tab
+ 
    .hide{
      display: none;
    }
@@ -46,20 +43,3 @@ mat-table {
   overflow: auto;
   max-height: 500px;
 }
-
-/* .search-form-field div.mat-form-field-underline{
-  display:none;
-}
-.search-form-field div.mat-form-field-infix{
-  border-top:0px;
-}
-.search-form-field div.mat-form-field-wrapper
-{
-  padding-bottom:0px;
-}
-  
-.search-form-field.mat-form-field-suffix button
-{
-  height: 32px;
-  width:32px;
-} */
