--- a/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
@@ -41,17 +41,13 @@
           <span> Schedular</span>
       </a>
         <br>
-
-          <!-- <a mat-list-item>
-            <mat-icon>account_circle</mat-icon>
-            <span>Logout</span>
-        </a>        <br>  -->
-
-    </mat-nav-list>
+</mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
     <!-- <div style="height: 100vh,100ch;"> -->
       <!-- <div style="display: box; width: 120%; min-width: 400px; margin-left:25%;"> -->
+        <h1> Organization Application Details</h1>
+
         <div class= "data-container mat-elevation-z12">
           <div class="example-header">
             <mat-form-field floatLabel="never">
@@ -122,46 +118,15 @@
           </mat-paginator>
           
           </div>
-          <!-- </div>  -->
-          
-          
-        <!-- <router-outlet></router-outlet> -->
-    <!-- </div> -->
-<!-- <app-creditor-table-list></app-creditor-table-list> -->
+        
     </mat-sidenav-content>
-<!-- <mat-toolbar color="primary">
-        <mat-toolbar-row>
-        <button mat-icon-button (click)="start.open('mouse')">
-            <mat-icon>menu</mat-icon>
-        </button>
-             <span>C₹ED!TZ</span>
-                <div fxFlex fxLayoutAlign="flex-end">
-                    <ul fxLayout="row" fxLayoutGAP="20px" fxFlexAlign="auto">
-                        <li> 
-                            <a href='home'> 
-                            <h4> Home</h4>
-                            </a>
-                        </li>
-                    <li>
-                        <button mat-button [matMenuTriggerFor]="menu">
-                        <mat-icon>person_outline</mat-icon>
-                        </button>
-                        <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
-                         SignOut
-                        </button>
-                        </mat-menu>
-                    </li>
-                </ul>
-               </div>
-            </mat-toolbar-row>
-        </mat-toolbar> -->
+
     </mat-sidenav-container>
     </div>
     <div *ngIf="this.store==null">
       <app-login></app-login>
      </div>
-    <!-- </div> -->
+   
     <router-outlet></router-outlet>
 
 
