--- a/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
@@ -42,8 +42,9 @@
    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    
+     
     <div class="data-container mat-elevation-z12">
+      <h1>Registerd Analysts </h1>
         <div class="example-header">
             <mat-form-field floatLabel="never">
               <input matInput (keyup)="applyFilter($event.target.value)" [(ngModel)]="searchKey" placeholder="Search">
@@ -52,6 +53,7 @@
              </button>
             </mat-form-field>
           </div>
+         
     <table mat-table [dataSource]="dataSource" matSort >
             <ng-container matColumnDef="userId">
             <mat-header-cell *matHeaderCellDef mat-sort-header > Analyst ID </mat-header-cell>
