--- a/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
@@ -1,6 +1,6 @@
 
 <!-- <div style="display: box; width: 90%; min-width: 400px;height:90%"> -->
-  <div *ngIf="this.storeRole=='Admin' and this.store!=null">
+  <!-- <div *ngIf="this.storeRole=='Admin' and this.store!=null"> -->
   <mat-sidenav-container  >
     
     <mat-sidenav #start mode="side" opened >
@@ -122,11 +122,11 @@
     </mat-sidenav-content>
 
     </mat-sidenav-container>
-    </div>
+    <!-- </div>
     <div *ngIf="this.store==null">
       <app-login></app-login>
      </div>
-   
+    -->
     <router-outlet></router-outlet>
 
 
