--- a/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
@@ -90,14 +90,14 @@
                      [pageSizeOptions]="pageSizeOptions"
                      (page)="pageEvent=$event">
       </mat-paginator>
-      
-      </div> 
+        </div> 
+    
 </mat-sidenav-content>
 
   </mat-sidenav-container>
   </div>
   <div *ngIf="this.store==null">
-  <app-login></app-login>
+  <app-login></app-login> -->
   </div>
   
   <router-outlet></router-outlet>
