--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -47,7 +47,7 @@
 														<span class="txt1">
 															Forgot
 														</span>
-														<a class="txt2" href="register">
+														<a class="txt2" href="forgot-password">
 															Username / Password?
 														</a>
 													</div>
@@ -56,6 +56,11 @@
 														<a class="txt2" href="register">
 															Create your Account
 															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+														</a>
+													</div>
+													<div class="text-center p-t-12">
+								                    <a class="txt2" href="reset-password">
+															change password?
 														</a>
 													</div>
 								</form>
