Spring Security+ minute changes

--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="this.storeRole=='Person' and this.store!=null">
+<div *ngIf="this.storeRole=='Person' and this.store!=null" style="margin-left:22%">
   <div class="limiter">
-          <H1 mat-dialog-title class=".login100-form-title " aTilt>Your Credit Details</H1><br>
 <mat-dialog-content>
+          <H1 mat-dialog-title class=".login100-form-title " aTilt>   Your Credit Details</H1><br>
 
       <div class="wrap-login100">
 
