--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -30,9 +30,14 @@
           </div>
       </li>  
 
-      <li class="nav-item" *ngIf="this.store==null">
-        <a class="nav-link" href="login" >  login  </a>
-      </li>
+     <li class="dropdown" *ngIf="this.store==null" >
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="policy">  Login  </a>
+          <div class="dropdown-menu" aria-labelledby="policy">
+            <a class="dropdown-item" href="register">New User, Sign Up</a>
+             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="login">Alredy have an Account</a>
+          </div>
+      </li>  
 
       <li class="nav-item" *ngIf="this.store!=null">
         <a class="nav-link" (click)="logout()" >  logout  </a>
