--- a/Creditz-Angular-src/app/history/history.component.html
+++ b/Creditz-Angular-src/app/history/history.component.html
@@ -5,28 +5,28 @@
 
 
   <div class="example-container mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort matSortActive="applicationId" matSortDirection="asc" matSortDisableClear  align= "center">
+  <table mat-table [dataSource]="dataSource" matSort matSortActive="applicationId" matSortStart="desc" matSortDisableClear  align= "center">
   <!-- Position Column -->
   <ng-container matColumnDef="applicationId">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Id </th>
+    <th mat-header-cell *matHeaderCellDef mat-header="applicationId"> Application Id </th>
     <td mat-cell *matCellDef="let element"> {{element.applicationId}} </td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="loanAmount">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Loan Amount </th>
+    <th mat-header-cell *matHeaderCellDef mat-header> Loan Amount </th>
     <td mat-cell *matCellDef="let element"> {{element.loanAmount}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="loanTenure">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> loan Tenure </th>
+    <th mat-header-cell *matHeaderCellDef mat-header> loan Tenure </th>
     <td mat-cell *matCellDef="let element"> {{element.loanTenure}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="applicationStatus">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Status </th>
+    <th mat-header-cell *matHeaderCellDef mat-header> Application Status </th>
     <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
   <!--  <div >
     <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
