--- a/Creditz-Angular-src/app/individual-user/individual-user.component.css
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.css
@@ -12,6 +12,13 @@ input[type=text], input[type=password] {
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
+
+.md-dialog-container {
+  background-color: #000;
+  width: 250px;
+  height: 250px
+}
+
 /* 
 .button {
   display: inline-block;
