--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -1,5 +1,5 @@
 <div style="max-width:50">
-  <button class="birdButton" (click)="goToUrl('Orgnizational-user')">Apply Here</button>
+  <button class="birdButton" (click)="checkusertype()">Apply Here</button>
   </div>
   
   <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
