--- a/Creditz-Angular-src/app/register/register.component.css
+++ b/Creditz-Angular-src/app/register/register.component.css
@@ -10,9 +10,10 @@ input[type=text], input[type=password], input[type=email], input[type=address] {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid black;
-  border-radius: 10%;
-  box-sizing: border-box;
+  border: 3px solid navy;
+  
+  border-radius: 15%;
+  /* box-sizing: border-box; */
   background-color:whitesmoke;
 }
 
