--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -57,6 +57,12 @@
 															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 														</a>
 													</div>
+													<div class="text-center p-t-136">
+														<a class="txt3" href="reset-password">
+															Change Password
+															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+														</a>
+													</div>
 								</form>
 
 					</div>
