--- a/Creditz-Angular-src/app/header/header.component.css
+++ b/Creditz-Angular-src/app/header/header.component.css
@@ -2,6 +2,17 @@
   cursor:pointer;
 }
 
+.profileButton {
+  background-image: url(src\assets\profile1.png);
+    background-size: 70px 70px;
+    width: 70px; 
+    height: 70px; 
+    background-color: transparent;
+    border: transparent;
+    margin-top: 2px;
+
+ }
+
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 110%;
