--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -49,10 +49,12 @@
 
 
     </ul>
-  <!--  <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>-->
+  <form class="form-inline my-2 my-lg-0" >
+<div style="max-width:50" *ngIf="this.store!=null">
+<!--<img src="./assets/profile.png" (click)="openProfileDialog()">-->
+<button class="profileButton" (click)="openProfileDialog()"></button>
+</div>
+    </form>
   </div>
 </nav> 
 <!--
