--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -41,28 +41,34 @@
 									<button type="submit" (click)=handleLogin() class="login100-form-btn" id="submit">Login</button>
 									</div>
 
-									
+									<div style="bottom:0px">
 													<div class="text-center p-t-12">
 														<span class="txt1">
 															Forgot
 														</span>
-														<a class="txt2" href="register">
+														<a class="txt2" href="forgot-password">
 															Username / Password?
 														</a>
+														
 													</div>
 
 													<div class="text-center p-t-136">
-														<a class="txt2" href="register">
-															Create your Account
-															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-														</a>
+
 													</div>
+																				<br>	
 													<div class="text-center p-t-136">
-														<a class="txt3" href="reset-password">
-															Change Password
+														<a class="txt2" href="register" style="padding-right: 15%; margin-left:0px">
+															Create your Account       
 															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 														</a>
+
+														<a class="txt2" href="reset-password">
+															      Change Password
+															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+														</a>
+														
 													</div>
+										</div>
 								</form>
 
 					</div>
