--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
@@ -89,7 +89,7 @@
                 <div *ngIf="this.secondFormGroup.controls['password'].value==this.secondFormGroup.controls['confirmpassword'].value">
                   <button mat-button mat-raised-button color="primary"
                    matStepperNext  [disabled]=" this.firstFormGroup.controls['userEmail'].value ==''"
-                   (click)="updateUser();stepper.reset()">Next</button>
+                   (click)="updateUser()">Next</button>
                 </div>
               </form>
             </mat-step>
