--- a/Creditz-Angular-src/app/reset-password/reset-password.component.css
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.css
@@ -5,6 +5,21 @@
      margin-right: 30px; */ 
 
   /* }  */ 
+  /* body {font-family: Arial, Helvetica, sans-serif;}
+  form {border: 3px solid #f1f1f1;} */
+  
+  /* input[type=email], input[type=password] {
+    width: 150%;
+  
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  } */
+
+
+
   .panel-body
   {
     width:100%;
@@ -83,7 +98,7 @@
   margin-bottom: 5%;
 }
 .limiter {
-    width: 80%;
+    width: 100%;
     margin: 0 0;
     height:80%
   }
