set change/forget password

--- a/Creditz-Angular-src/app/reset-password/reset-password.component.css
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.css
@@ -5,10 +5,9 @@
      margin-right: 30px; */ 
 
   /* }  */ 
-  /* body {font-family: Arial, Helvetica, sans-serif;}
-  form {border: 3px solid #f1f1f1;} */
-  
-  /* input[type=email], input[type=password] {
+
+
+  input[type=email],input[type=password]{
     width: 150%;
   
     padding: 12px 20px;
@@ -16,10 +15,8 @@
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-  } */
-
-
-
+  }
+  
   .panel-body
   {
     width:100%;
@@ -32,6 +29,7 @@
     display: flex;
     width: 100%;
     margin-bottom: 15px;
+    /* position: fixed; */
   }
   .form-control {
     width:100%;
@@ -98,7 +96,7 @@
   margin-bottom: 5%;
 }
 .limiter {
-    width: 100%;
+    width: 80%;
     margin: 0 0;
     height:80%
   }
