--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Change Password</title>
 <body>
-<div class="limiter"style=" width:100%; margin-left:25% ">
+<div class="limiter"style=" width:70%; margin-left:25% ">
     <div class="container-login100">
         <div class="wrap-login100">
                  <div class="text-center">
@@ -23,23 +23,26 @@
                                   [class.is-invalid]="email.invalid && email.touched"
                                   placeholder="Enter email" name="pemail" 
                                   [(ngModel)]="userModel1.userEmail" required>
+                                  
                                   <div *ngIf="email.invalid && (email.dirty || email.touched)"
                                   class="text-danger">
+                                  
                                   <small *ngIf="email.errors.pattern">
-                                  Enter in email format.
+                                               Enter the mail following the email format.
                                   </small> 
                                   <small *ngIf="email.errors.required">
-                                  Email is required.
+                                                 This field cannot be empty,email is required.
                                   </small> 
+
+                                  <div *ngIf="emailAlreadyExist!=''" class="text-danger">
+                                    <small>{{emailAlreadyExist}} </small>
+                                
+                                </div>
                                   </div>
               
-                                  <div *ngIf="emailAlreadyExist!=''" class="text-danger">
-                                      <small>{{emailAlreadyExist}} </small>
-                                  
-                                  </div>
-                                  <br>
+                                 
+                               <br>
                                 </div>
-                                
                             </div>
                            
                             <div class="form-group">
@@ -61,7 +64,7 @@
                                             <div *ngIf="oldpassword.invalid && (oldpassword.dirty || oldpassword.touched)"
                                             class="text-danger">
                                             <small *ngIf="oldpassword.errors.required">
-                                            Password is required.
+                                            This field cannot be empty,Old Password is required.
                                             </small>
                                               
                                             </div>
@@ -88,7 +91,7 @@
                                                 <div *ngIf="password.invalid && (password.dirty || password.touched)"
                                                 class="text-danger">
                                                 <small *ngIf="password.errors.required">
-                                                Password is required.
+                                                This field cannot be empty ,New Password is required.
                                                 </small>
                                                 <small *ngIf="password.errors.pattern">
                                                 At least 8 characters in length,Lowercase letters,Uppercase letters,Numbers,Special characters.
