analyst and header changes

--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
@@ -81,7 +81,7 @@
                   <div *ngIf="this.secondFormGroup.controls['password'].value!=this.secondFormGroup.controls['confirmpassword'].value&& 
                   this.secondFormGroup.controls['confirmpassword'].value!=''&&
                   this.secondFormGroup.controls['confirmpassword'].value!=''"  class="text-danger">
-                  <small> Password and Confirm Password are not matched class</small>
+                  <small> Password and Confirm Password are not matched </small>
                   </div>
                 </mat-form-field>
                
