--- a/Creditz-Angular-src/app/analyst-dialog-box/analyst-dialog-box.component.html
+++ b/Creditz-Angular-src/app/analyst-dialog-box/analyst-dialog-box.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Hi</h1>
+<h1 mat-dialog-title></h1>
 <div mat-dialog-content>
-  <p>You Have Registared SuccessFully</p>
+  <p>Financial Analyst Registered SuccessFully</p>
   
 </div>
 <div mat-dialog-actions>
