--- a/Creditz-Angular-src/app/analyst-registration/analyst-registration.component.html
+++ b/Creditz-Angular-src/app/analyst-registration/analyst-registration.component.html
@@ -9,7 +9,7 @@
                     object-fit:cover
                     src="assets\admin.jpg" alt="admin.jpg">
                     <div class="header">
-                       <h5>M.N.Rao</h5>
+                       <h4>Admin</h4>
                     </div>
                </div>
                <a mat-list-item [routerLink]="'/organization-creditor-table-list'">
